--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  padding: 100px;
+}
+
+.todos-container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
 }
 
 .App-logo {
